# Transponder

./: README.md  Train.ipynb
BidirectionalUtils/: .gitignore  pyproject.toml
data/: slim_pajama_100_samples_20_percent_masking.json  slim_pajama_10_samples_20_percent_masking.json  slim_pajama_first_1000.json  slim_pajama_first_sample_10_percent_masking.json  slim_pajama_first_sample_20_percent_masking.json  slim_pajama_first_sample_30_percent.json  slim_pajama_first_sample_30_percent_masking.json  slim_pajama_first_sample_5_percent.json
pondering_criteria/: EntropyCriteria.py  PonderingCriteria.py  ToptwoProbCriteria.py  __init__.py
runs/spaudel/100_samples_with_20_percent_masking/: events.out.tfevents.1718553716.social-large.154841.14
runs/spaudel/100_samples_with_20_percent_masking_babied_lr/: events.out.tfevents.1718555650.social-large.154841.20  events.out.tfevents.1718557969.social-large.154841.21
runs/spaudel/100_samples_with_20_percent_masking_exp_lr/: events.out.tfevents.1718554536.social-large.154841.16
runs/spaudel/100_samples_with_20_percent_masking_exp_lr_run2/: events.out.tfevents.1718554851.social-large.154841.18
runs/spaudel/100_samples_with_20_percent_masking_exp_lr_run3/: events.out.tfevents.1718555257.social-large.154841.19
runs/spaudel/100_samples_with_20_percent_masking_run_2/: events.out.tfevents.1718554051.social-large.154841.15
sampling_strategies/: GreedySampling.py  SamplingStrategy.py  TemperatureSampling.py  TopKSampling.py  TopPSampling.py  __init__.py
(+12 files in other folders)
